# pepper-ai-samples

./: .gitignore  README.md  UV-USAGE.md  introduction.md  pyproject.toml  server.py  setup.py  start_servers.sh
.cursor/rules/: a2a-mcp-integration.mdc  a2a-protocol.mdc  client-usage.md  client-usage.mdc  code-standards.mdc  common-library-guidelines.md  common-library-guidelines.mdc  common-types.mdc  database-query-server.mdc  development-guidelines.mdc  development-workflow.mdc  environment-setup.mdc  example-development.mdc  example-standards.mdc  git-workflow.mdc  mcp-patterns.mdc  mcp-protocol.mdc  mcp-server-standards.mdc  mcp-standards.md  mcp-standards.mdc  mcp-uv-patterns.mdc  project-structure.md  project-structure.mdc  repository-structure.mdc  setup-instructions.mdc  shared-libraries.mdc  simplemcp.mdc  testing-guidelines.mdc  typescript-standards.mdc  uv-usage.mdc  web-search-summarizer.mdc
00-hello-world/: README.md  pyproject.toml  server.py
00-hello-world/templates/: formal_greeting.template  quotes.template  welcome_email.template
01-file-explorer/: README.md  server.py
01-file-explorer/src/: server.py
02-web-search/: README.md  pyproject.toml  server.py
02-web-search/src/: server.py
03-database-query/: README.md
03-database-query/src/: server.py
04-agent-system/: README.md  pyproject.toml
04-agent-system/src/: server.py
05-fraud-detection/: README.md
05-fraud-detection/src/: server.py
07-architecture-analysis/: pyproject.toml
07-code-review/: README.md
08-microservices/: server.py
10-event-driven/: server.py
11-tech-debt/: server.py
12-doc-writer/: README.md
14-github-projects/: .env.example  README.md  requirements.txt
a2a-examples/: README.md
a2a-examples/00-a2a-hello-world/: README.md  client.py  pyproject.toml  requirements.txt  server.py
a2a-examples/00-a2a-hello-world/.well-known/: agent.json
a2a-examples/00-a2a-hello-world/src/: server.py
a2a-examples/01-a2a-mcp-integration/: a2a_mcp_bridge.py
a2a-examples/01-a2a-network/: client.py  coordinator_agent.py  network_client.py  text_agent.py
a2a-examples/01-a2a-network/src/: client.py
a2a-examples/02-a2a-web/: README.md  a2a_mcp_integration.py  client.py  pyproject.toml  server.py
a2a-examples/02-a2a-web/.well-known/: agent.json
a2a-examples/02-a2a-web/src/: client.py  server.py
a2a-examples/03-a2a-basics/: pyproject.toml  requirements.txt
a2a-examples/03-a2a-basics/.well-known/: agent.json
a2a-examples/03-a2a-basics/src/: client.py
a2a-examples/04-a2a-api-integration/: README.md
a2a-examples/04-a2a-api-integration/.well-known/: agent.json
a2a-examples/04-a2a-api-integration/src/: server.py
a2a-mcp-examples/: README.md
a2a-mcp-examples/01-a2a-mcp-integration/: README.md  pyproject.toml
a2a-mcp-examples/02-web-search-summarizer/: a2a_mcp_bridge.py  requirements.txt  server.py
a2a-mcp-examples/02-web-search-summarizer/.well-known/: agent.json
a2a-mcp-examples/02-web-search-summarizer/templates/: index.html
a2a-mcp-examples/03-a2a-mcp-weather-insights/templates/: weather_report.template
common/: README.md
common/transport/: __init__.py  client.py  mcp.py  transports.py
common/types/: __init__.py
examples/a2a/00-a2a-hello-world/: README.md  pyproject.toml
examples/a2a/00-a2a-hello-world/src/: client.py
examples/a2a/01-a2a-network/: README.md  a2a_client.py  math_agent.py  pyproject.toml
examples/a2a/02-a2a-web/: requirements.txt
examples/a2a/03-a2a-basics/: README.md
examples/a2a/04-a2a-api-integration/: pyproject.toml  requirements.txt
examples/integrated/01-a2a-mcp-integration/: server.py  (+1 more)
examples/integrated/02-web-search-summarizer/: README.md  pyproject.toml  server.py
examples/integrated/03-a2a-mcp-weather-insights/: README.md  a2a_mcp_bridge.py  pyproject.toml  requirements.txt  server.py
examples/integrated/03-a2a-mcp-weather-insights/.well-known/: agent.json
examples/mcp/00-hello-world/: README.md  pyproject.toml  server.py
examples/mcp/01-file-explorer/: pyproject.toml  server.py
examples/mcp/02-web-search/: pyproject.toml  server.py
examples/mcp/03-database-query/: database.db  example.db  pyproject.toml
libs/pepperpy-mcp/: __init__.py  pyproject.toml
libs/pepperpy-mcp/transport/: __init__.py  transports.py
libs/pepperpy-mcp/types/: __init__.py
libs/pepperpya2a/: README.md  pyproject.toml
libs/pepperpya2a/src/pepperpya2a/: __init__.py  a2a.py
libs/pepperpymcp/: README.md  pyproject.toml
libs/pepperpymcp/src/pepperpymcp/: __init__.py  client.py  common.py  host.py  mcp.py  messages.py  sample_server.py  transports.py
mcp-examples/: README.md  adaptive_client.py  example_usage.py  mcp.json  mcp_discovery.py  mcp_runner.py  run_mcp_config.sh  run_mcp_demo.sh  run_mcp_integration.py  run_weather_stdio.sh  standalone_demo.py
mcp-examples/.mcp/: servers.json
mcp-examples/00-hello-world/: README.md  client.html  pyproject.toml  server.py
mcp-examples/01-file-explorer/: pyproject.toml  server.py
mcp-examples/02-web-search/: server.py
mcp-examples/03-database-query/: pyproject.toml  server.py
mcp-examples/05-api-design/: README.md  pyproject.toml  server.py
mcp-examples/06-performance-profiling/: README.md  pyproject.toml  server.py
mcp-examples/07-architecture-analysis/: server.py
mcp-examples/08-microservices/: pyproject.toml  server.py
mcp-examples/09-iac-analyzer/: pyproject.toml  server.py
mcp-examples/10-event-driven/: pyproject.toml  server.py
mcp-examples/11-tech-debt/: pyproject.toml  server.py
mcp-examples/13-education/: README.md
mcp-examples/14-github-projects/: pyproject.toml  server.py
mcp-examples/mcp-web-client/: README.md  diagnose.py  index.html  mcp-client.js  mcp_host.py  pyproject.toml  run_examples.sh  start_host.py
mcp-examples/servers/: __init__.py  sample_server.py  search_server.py  weather_server.py
mcp_validation_reports/: mcp_validation_report_20250427_114701.html  mcp_validation_report_20250427_114701.json  mcp_validation_summary_20250427_114701.txt
scripts/: mcp_validator.py
tools/: migrate_examples.sh  setup-env.sh
(+7 files in other folders)
