[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pepper-ai-samples"
version = "0.1.0"
description = "Pepper AI Samples"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.104.0", "uvicorn>=0.23.2", "pydantic>=2.4.2"]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]

[tool.hatch.build.targets.wheel]
packages = ["common"]
