[project]
name = "hello-world-mcp"
version = "1.0.0"
description = "A simple hello world MCP server example"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0, <0.35.0",
    "requests>=2.28.0",
]

[project.scripts]
hello = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
