[project]
name = "hello-world-mcp"
version = "1.0.0"
description = "Hello World example using MCP SDK"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "pepperpymcp",
]

[project.scripts]
hello = "server:mcp.run"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
package = true

[tool.uv.sources]
pepperpymcp = { path = "../libs/pepperpymcp", editable = true }

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]
