[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-search-mcp"
version = "1.0.0"
description = "Web Search example using MCP SDK"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "pepperpymcp",
    "requests>=2.31.0", # Added for web requests
]

[project.scripts]
web-search = "server:mcp.run"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
package = true

[tool.uv.sources]
pepperpymcp = { path = "../libs/pepperpymcp", editable = true }

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]

[tool.hatch.build]
include = ["server.py", "templates/*.template"]
