[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "architecture-analysis-mcp"
version = "0.1.0"
description = "Architecture Analysis MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "radon>=6.0.1",
    "pylint>=3.0.2",
    "astroid>=3.0.1",
    "networkx>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]
