[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-basics"
version = "0.1.0"
description = "Basic A2A protocol examples"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "aiohttp>=3.8.5",
    "pydantic>=2.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]
