[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-design-mcp"
version = "0.1.0"
description = "API Design Assistant MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "openapi-spec-validator>=0.7.1",
    "prance>=23.6.21.0",
    "datamodel-code-generator>=0.25.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]
