[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance-profiling-mcp"
version = "0.1.0"
description = "Performance Profiling MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.1",
    "psutil>=5.9.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "ruff>=0.0.292"
] 