[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microservices-assistant-mcp"
version = "0.1.0"
description = "Microservices Assistant MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "docker>=6.1.3",
    "kubernetes>=28.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "jaeger-client>=4.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]
