[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-driven-mcp"
version = "0.1.0"
description = "Event-Driven Architecture Assistant MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "asyncio-nats-client>=0.11.5",
    "confluent-kafka>=2.3.0",
    "aio-pika>=9.3.0",
    "opentelemetry-instrumentation>=0.41b0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]
