[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-web-client"
version = "0.1.0"
description = "A web client and host for the Model Context Protocol (MCP)"
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.0",
    "pepperpymcp>=0.1.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.95.0",
]

[project.optional-dependencies]
dev = ["black>=23.1.0", "pylint>=2.16.0", "mypy>=1.0.0"]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.pylint.messages_control]
disable = ["C0111", "C0103", "C0303", "W1203", "C0330", "C0326"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.build]
include = [
    "index.html",
    "mcp-client.js",
    "mcp_host.py",
    "README.md",
    "run_examples.sh",
]

[tool.uv]
package = true
