[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-search-summarizer"
version = "0.1.0"
description = "Web Search Summarizer using A2A and MCP integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "pepperpya2a>=0.1.0",
    "pepperpymcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.2", "black>=23.9.1", "ruff>=0.0.292"]
